1998-05-12  Kjartan Maraas  <kmaraas@fib.hl.no>

	* argp-help.c (argp_doc): Backed out previous "fix". :-)
	As pointed out it was dead wrong.
	
1998-05-09  Kjartan Maraas  <kmaraas@fib.hl.no>

	* argp-help.c (argp_doc): Removed a compiler warning.

1998-04-14  Raja R Harinath  <harinath@cs.umn.edu>

	* gnomesupport-h.c (main): Make gnomesupport.h include stddef.h
	unconditionally. 

1998-04-13  Raja R Harinath  <harinath@cs.umn.edu>

	* scandir.c (<sys/types.h>): Include.
	* gnomesupport-h.c (!HAVE_SCANDIR): Do all the `dirent' wrangling
	only if `scandir' is needed.  Also, include <sys/types.h> in all
	cases. 

1998-04-13  Seth Alves  <alves@twitch.cp.domain.net>

	* gnomesupport-h.c (HAVE_DIRENT_H): FreeBSD needs <sys/types.h>
	before <dirent.h>.
	
1998-04-12  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (supportincludedir): Is now $(pkglibdir)/include.
	`gnomesupport.h' is a generated file dependent on the configure
	process.  So, this seems a good place.  The rest of the headers
	are also here just because I'm too lazy to maintain two separate
	include directories to search in for `libgnomesupport' stuff ;-)
	(supportinclude_DATA): New var.  Has `gnomesupport.h'.
	(BUILT_SOURCES): Generate `gnomesupport.h'.

	* gnomesupport-h.c: New file.  Used to generate `gnomesupport.h',
	which contains prototypes for many of the functions in
	`libgnomesupport'.  This method is used to ensure that prototypes
	appear only for those functions that are provided by
	`libgnomesupport'. 

	* scandir.c (alphasort): New utility function.

1998-04-08  Raja R Harinath  <harinath@cs.umn.edu>

	* scandir.c: Import from GNU libc.
	Remove assumptions that this file is compiled inside GLIBC.
	Here are the ChangeLog entries when I imported it originally into
	`gwp':

	1998-02-08  Raja R Harinath  <harinath@cs.umn.edu>
        	* scandir.c (scandir): Revert change of `1998-02-07'.  
		Don't use d_reclen, but fix the expression used to
		figure out the length.
